--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="media_style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <title>Курсовая</title>
+    <title>Курсовая страница Revo</title>
 </head>
 
 <body>
@@ -52,7 +51,7 @@
 
 
 
-    <section class="features animate__animated animate__fadelDown animate__delay-3s" id="coffe">
+    <section class="features" id="coffe">
         <div class="section__title">
             <h1 class="features__title-semibold semibold">
                 your personalized coffe
